fix: update codemirror sizing for scrollbar

--- a/src/main.scss
+++ b/src/main.scss
@@ -33,7 +33,6 @@ body, html {
   -webkit-overflow-scrolling: touch;
 
   flex: 1 1 auto;
-  width: 100%;
   height: 100%;
   resize: none;
   font-size: var(--sn-stylekit-font-size-editor);
